fix: fix sort by  alignment and proptypes error

--- a/services/web-app/components/catalog-sort/catalog-sort.module.scss
+++ b/services/web-app/components/catalog-sort/catalog-sort.module.scss
@@ -61,6 +61,7 @@
 
   // overide carbon color
   :global(.cds--label) {
+    padding-left: 0;
     color: theme.$text-primary;
   }
 
